finished mock example of tabular correction view

--- a/tabular_summary_view.html
+++ b/tabular_summary_view.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body style="background-color: #f7eaff;">
-		<div class="container" id="accordionExample">
+		<div class="container">
 			<h1>CCAI - Summary View</h1>
 
 			<table class="table table-bordered table-hover">
