add simple navigations via pages for now

--- a/tabular_correction_view.html
+++ b/tabular_correction_view.html
@@ -50,6 +50,8 @@
 					</tr>
 				</tbody>
 			</table>
+
+			<a href="tabular_summary_view.html">Go to summary view</a>
 		</div>
 
 		<!-- Modal Row 1, TODO: refactor -->
