--- a/tabular_summary_view.html
+++ b/tabular_summary_view.html
@@ -119,6 +119,8 @@
 					</tr>
 				</tbody>
 			</table>
+
+			<a href="tabular_correction_view.html">Go to correction view</a>
 		</div>
 
 		<!-- jQuery library -->
