--- a/tabular_summary_view.html
+++ b/tabular_summary_view.html
@@ -61,7 +61,7 @@
 											<td>4324</td>
 											<td>3</td>
 											<td>12 min</td>
-											<td><a href="#">See Journey Graph</a></td>
+											<td><a href="user_journey_view.html">See Journey Graph</a></td>
 										</tr>
 
 										<tr>
@@ -72,7 +72,7 @@
 											<td></td>
 											<td></td>
 											<td>10 min</td>
-											<td><a href="#">See Journey Graph</a></td>
+											<td><a href="user_journey_view.html">See Journey Graph</a></td>
 										</tr>
 									</tbody>
 								</table>
@@ -110,7 +110,7 @@
 											<td>15/30</td>
 											<td>57/60</td>
 											<td>12 min</td>
-											<td><a href="#">See Journey Graph</a></td>
+											<td><a href="user_journey_view.html">See Journey Graph</a></td>
 										</tr>
 									</tbody>
 								</table>
